sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:5: error: not enough arguments for method actualDist: (nbBases: Int, nbPos: Int, base: Int)Array[Int].
Unspecified value parameter base.
  liste = actualDist(nbBases,nbPos)
                    ^NaiveBaseball:11: error: not enough arguments for method actualDist: (nbBases: Int, nbPos: Int, base: Int)Array[Int].
Unspecified value parameter base.
    liste = actualDist(nbBases,nbPos)
                      ^NaiveBaseball:49: error: value ==- is not a member of Int
    if (getCouleurJoueur(i,j)==-1){
                             ^